@@ -54,7 +54,7 @@ SUBDIRS = \
 	  $(BUILDSUBDIR_MULTI) \
 	  $(BUILDSUBDIR_REMOTE) .
 
-DIST_SUBDIRS = muscat36 sleepycat quartz inmemory multi net
+DIST_SUBDIRS = muscat36 sleepycat quartz inmemory multi net .
 
 libbackend_la_LIBADD = \
           $(LIBADD_MUSCAT36) \
